# performance-curves

./: .flake8  .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: CI.yml  tests.yml
docs/: 404.html  index.html
docs/LICENSE/: index.html
docs/api/: index.html
docs/search/: search_index.json
docs_src/: LICENSE.md  README.md  api.md
docs_src/stylesheets/: extra.css
performance_curves/: __init__.py  _protocols.py  _utils.py  curve.py  metric.py  performance_curve.py  performance_curve_bundle.py  utils.py
tests/: test_curve.py  test_cutoff_at.py  test_performance_curve.py  test_performance_curve_bundle.py  test_threshold_at.py  test_utils.py
